# agent-wire-node

./: .gitignore  .wireignore  DADBEARTEST.html  README.md  dist  index.html  package-lock.json  package.json  vite.config.ts
.claude/: handoff-next-session.md  settings.json
.lab.bak.1774645342/: branches.md  config.md  log.md  parking-lot.md  rebuild-upper.sh  results.tsv
.lab.bak.1775403612/: branches.md  config.md  friction-log.md  handoff-layer-numbering-fix.md  handoff-next-session.md  handoff-prompt-tuning.md  handoff-question-build-l0-only.md  handoff-question-pyramid-ui.md  handoff-recipe-as-contribution.md  handoff-session-2026-04-04.md  handoff-understanding-web-build.md  handoff-understanding-web-gaps.md  handoff-yaml-wiring-debug.md  log.md  parking-lot.md  results.tsv
.lab.bak.20260330195604/: run-experiment.sh
.lab.bak.20260402200504/: branches.md  chain-system-reference.md  config.md  handback-2026-04-02-mega-session.md  handoff-adaptive-dehydration.md  handoff-apex-ready-signal.md  handoff-batch-size-for-each.md  handoff-chain-auto-sync.md  handoff-chain-sync-strategy.md  handoff-client-side-rate-limiting.md  handoff-clustering-viz.md  handoff-compact-inputs-all-steps.md  handoff-convergence-to-yaml.md  handoff-debug-json-parse-failures.md  handoff-dynamic-max-tokens.md  handoff-everything-to-yaml.md  handoff-fix-blind-cascade.md  handoff-item-fields-and-token-batching.md  handoff-item-fields-dot-notation.md  handoff-largest-first-ordering.md  handoff-oversized-chunk-splitting.md  handoff-prompt-quality-session.md  handoff-proportional-batch-split.md  handoff-self-healing-parse.md  handoff-sub-chains.md  hotfix-container-output-bubble.md  hotfix-json-extractor.md  hotfix-json-walker-skip-false-starts.md  hotfix-valid-primitives.md  hotfix-validator-skip-non-llm.md  log.md  operations-guide.md  parking-lot.md  sample-bloated-l0.json  sample-bloated-source.md  sample-good-l0.json  sample-good-source.md  sample-l0-extraction.json  sample-source-doc.md
.lab.bak.20260403082921/: branches.md  config.md  friction.md  handoff-pyramid-quality-researcher.md  handoff-unfuck-pyramids.md  hotfix-inner-step-heal.md  log.md  parking-lot.md  results.tsv
.lab.bak.20260404073609/: branches.md  config.md  debug-cluster-output-sample.json  debug-current-cluster-prompt.md  debug-current-extract-prompt.md  debug-l0-extraction-GOOD.json  debug-l0-extraction-sample.json  gap-analysis-document-pipeline-prompts.md  handback-2026-04-03-container-validator-architecture.md  handback-2026-04-03-ipc-blocker.md  handback-http-mutations-are-live.md  handoff-bounded-build-feature.md  handoff-debug-clustering-with-adam.md  handoff-extraction-quality-fix.md  handoff-l0-extraction-review.md  handoff-rust-condensation-ladder.md  hotfix-restore-http-mutation-routes.md  log.md  parking-lot.md  plan-bounded-build-gaps.md  plan-layered-doc-pyramid-test.md
.lab.bak.20260422002224/: branches.md  config.md  log.md  (+6 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: app.css  bundled_contributions.json  client.js  client_ws.js  robots.txt
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_mode.rs  auth.rs  boot.rs  compute_market.rs  compute_queue.rs  credits.rs  fleet.rs  http_utils.rs  lib.rs  main.rs  market.rs  messaging.rs  retention.rs  server.rs  sync.rs  tunnel.rs  utils.rs  vocabulary.rs  work.rs
src-tauri/src/partner/: context.rs  conversation.rs  crystal.rs  mod.rs  routes.rs  warm.rs
src-tauri/src/pyramid/: auto_update_ops.rs  build.rs  build_runner.rs  canonical_l0.rs  chain_dispatch.rs  chain_engine.rs  chain_executor.rs  chain_loader.rs  chain_proposal.rs  chain_publish.rs  chain_registry.rs  chain_resolve.rs  chain_resolver.rs  characterize.rs  collapse.rs  compute_chronicle.rs  compute_market_ctx.rs  compute_market_ops.rs  compute_quote_flow.rs  compute_requester.rs  config_contributions.rs  config_helper.rs  converge_expand.rs  cost_model.rs  credentials.rs  cross_pyramid_router.rs  crystallization.rs  dadbear_compiler.rs  dadbear_extend.rs  dadbear_preview.rs  dadbear_supervisor.rs  db.rs  defaults_adapter.rs  delta.rs  demand_gen.rs  demand_signal.rs  dispatch_policy.rs  event_bus.rs  event_chain.rs  evidence_answering.rs  (+104 more)
src-tauri/src/pyramid/public_html/: ascii_art.rs  auth.rs  etag.rs  integration_tests.rs  mod.rs  rate_limit.rs  render.rs  reserved.rs  routes_ask.rs  routes_assets.rs  routes_login.rs  routes_read.rs  routes_ws.rs  web_sessions.rs
src-tauri/tests/: phase6_wanderer_vocab_http.rs  phase9d_smoke.rs  walker_spine_enforcement.rs  walker_v3_boot_sequence.rs  walker_v3_circuit_breaker.rs  walker_v3_decision_wired_at_step_entry.rs  walker_v3_fleet_readiness.rs  walker_v3_local_readiness.rs  walker_v3_market_readiness.rs  walker_v3_phase_a_migration.rs  walker_v3_smoke_live_db.rs
(+777 files in other folders)
