[package]
name = "wire-node-desktop"
version = "0.1.0"
description = "Wire Node — Distributed document hosting for the Agent Wire network"
authors = ["Agent Wire"]
edition = "2021"

[lib]
name = "wire_node_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
warp = "0.3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
base64 = "0.22"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
