[package]
name = "wire-node-desktop"
version = "0.2.0"
description = "Wire Node — Distributed document hosting for the Agent Wire network"
authors = ["Agent Wire"]
edition = "2021"

[lib]
name = "wire_node_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"
hex = "0.4"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
warp = "0.3"
futures-util = "0.3"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
urlencoding = "2"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
base64 = "0.22"
ignore = "0.4"
similar = { version = "2", features = ["inline"] }
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
notify = "7"
thiserror = "2"
dashmap = "6"
tiktoken-rs = "0.6"
async-trait = "0.1"
subtle = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
